--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -258,9 +258,9 @@ post_wordcount:
 
 # Declare license on posts
 post_copyright:
-  enable: false
-  license: CC BY-NC-SA 3.0
-  license_url: https://creativecommons.org/licenses/by-nc-sa/3.0/
+  enable: enable
+  license: CC BY-NC-SA 4.0
+  license_url: http://creativecommons.org/licenses/by-sa/4.0/
 
 
 
